cmake_minimum_required(VERSION 3.5)

project(BMP_to_YUV LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(BMP_to_YUV main.cpp)

include(GNUInstallDirs)
install(TARGETS BMP_to_YUV
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
